@@ -4,6 +4,9 @@
 2006-05-04  Volker Stroebel <volker@planetpenguin.de>
 	* data/init.nut src/ppogl/font.cpp
 	use tables in squirrel functions
+	
+	* src/ppogl/audio/*
+	fixed compilation
 
 2006-05-03  Volker Stroebel <volker@planetpenguin.de>
 	* (*)
